--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
       <img src="images/logo2.png" alt="" style="margin:5px 0px">
       <div class="menu">
         <ul>
-          <li><a href="home.html">HOME</a></li>
+          <li><a class="nav" href="home.html">HOME</a></li>
           <li><a href="gallery.html">GALLERY</a></li>
         </ul>
       </div>
